Update nav; fix spacing issues
+ Peg school show page link to nav as School Overview Dashboard, remove links to old dashboard pages for now
+ Update nav margins to reflect wider school show page layout
+ Hide link to school dashboard if educator is currently viewing the dashboard

--- a/app/assets/stylesheets/nav.scss
+++ b/app/assets/stylesheets/nav.scss
@@ -25,33 +25,34 @@
   }
 }
 
-.search-label {
-  padding-left: 20px;
+#student-searchbar {
+  margin: 0 30px 10px 0;
 }
 
 .navwrap {
-  width: 80%;
-  margin-left: 20px;
+  margin: 0 20px;
+  position: relative;
+  bottom: 1px;
 
   #title {
-      display: inline;
+    display: inline;
   }
 
   nav {
-      float: right;
-      padding-top: 38px;
+    float: right;
+    padding-top: 38px;
 
-      a {
-        padding-right: 10px;
-
-        @media screen and (max-width: $phase2) {
-          padding-right: 20px;
-          padding-left: 0;
-        }
-      }
+    a {
+      padding-right: 10px;
 
       @media screen and (max-width: $phase2) {
-        padding-bottom: 20px;
+        padding-right: 20px;
+        padding-left: 0;
       }
+    }
+
+    @media screen and (max-width: $phase2) {
+      padding-bottom: 20px;
+    }
   }
 }
